--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <byte.buddy.version>1.17.1</byte.buddy.version>
         <spring.webflux.version>6.2.3</spring.webflux.version>
-        <sl4f.version>2.0.17</sl4f.version>
         <logback.classic.version>1.3.14</logback.classic.version>
         <micrometer.observation.version>1.14.4</micrometer.observation.version>
         <junit.version>4.13.2</junit.version>
         <junit.jupiter.version>5.13.0-M2</junit.jupiter.version>
+        <mockito.inline.version>4.0.0</mockito.inline.version>
+        <reactor.test.version>3.7.3</reactor.test.version>
 
     </properties>
 
@@ -53,11 +54,6 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${sl4f.version}</version>
-        </dependency>
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.classic.version}</version>
@@ -74,6 +70,18 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>${mockito.inline.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>${reactor.test.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -125,7 +133,7 @@
                 <configuration>
                     <transformations>
                         <transformation>
-                            <plugin>org.hc.idd.ByBdClientImplMavenPlugin</plugin>
+                            <plugin>org.hc.idd.ByBdClientMavenPlugin</plugin>
                         </transformation>
                     </transformations>
                     <source/>
